Next, create a new type selector that targets the header element. Set the background color to orange and the text color to white

--- a/94-cc-type-selectors-2/style.css
+++ b/94-cc-type-selectors-2/style.css
@@ -3,6 +3,11 @@ body{
     text-align: center;
 }
 
+header{
+    background-color: orange;
+    color: white;
+}
+
 p{
     color: lightslategrey;
 }
