Next, target the class main-heading. Give the heading a font-size property and set the value to 72px

--- a/94-cc-id-and-class-selectors/style.css
+++ b/94-cc-id-and-class-selectors/style.css
@@ -1,16 +1,10 @@
 /* Complete the challenge by writing CSS below */
-body{
-    text-align: center;
-}
+
 
 .main-header{
     background-color: orange;
 }
 
-p{
-    color: lightslategrey;
-}
-
-div{
-    background-color: lightblue;
+.main-heading{
+    font-size: 72px;
 }
