Next, define the background property and value that prevents a background image from repeating in any direction

--- a/131-cc-styling-the-wildlife-div-with-background-properties/style.css
+++ b/131-cc-styling-the-wildlife-div-with-background-properties/style.css
@@ -1,5 +1,6 @@
 /* Complete the challenge by writing CSS below */
 
 .wildlife {
-    background-image: url(img/bear.jpg)
+    background-image: url(img/bear.jpg);
+    background-repeat: no-repeat;
 }
