--- a/131-cc-styling-the-wildlife-div-with-background-properties/style.css
+++ b/131-cc-styling-the-wildlife-div-with-background-properties/style.css
@@ -4,4 +4,5 @@
     background-image: url(img/bear.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
 }
