--- a/131-cc--floats/style.css
+++ b/131-cc--floats/style.css
@@ -1,6 +1,8 @@
 /* Complete the challenge by writing CSS below */
 
-
+.content-lodging {
+    float: right;
+}
 
 /* Clearfix ---------------------------------- */
 
