--- a/131-cc--floats/style.css
+++ b/131-cc--floats/style.css
@@ -4,6 +4,10 @@
     float: right;
 }
 
+.content-traveling {
+    float: left;
+}
+
 /* Clearfix ---------------------------------- */
 
 .group:after {
